# pymatch

./: .gitignore  DEVNOTES.md  LICENSE  NOTES.md  README.md  conv2d_test.py  demo_linear.ipynb  demo_neuron.py  gpt_test.py  pyproject.toml  setup.py  test.ipynb  test.py
images/: .$ComputeGraph.drawio.bkp  .$ExampleNetwork.drawio.bkp  ComputeGraph.drawio  ExampleNetwork.drawio  MatchLogo.graffle
match/: __init__.py  list2d.py  matrix.py  nn.py  tensor.py  tensordata.py  tensordata_numpy.py  util.py
match/nn/: __init__.py  activations.py  conv2d.py  linear.py  loss.py  module.py  nn.py  softmax.py  transformer.py
speed-test/: harness.py  matrix.py  matrix_listcomp.py  matrix_loops.py  notes.md  runner.sh
src/: pytensorbase.c  tensorbase.c  tensorbasemodule.c  tensordata.c
src/match/: __init__.py  nn.py  old_tensordata.py  tensor.py  tensordata.py  util.py
test/: test_tensordata.py
tests/: base.py  test_activations.py  test_conv2d.py  test_loss.py  test_module.py  test_softmax.py  test_tensor.py  test_tensordata.py
