[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymatch"
version = "0.1.0"
authors = [{name="Sam Malik"}, {name="Anthony J. Clark"}]
description = "A simple, PyTorch-like automatic differentiation library for education."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Education",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/pymatch/pymatch"
Issues = "https://github.com/pymatch/pymatch/issues"
