[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymatch"
version = "0.1.0"
authors = [{name="Sam Malik"}, {name="Anthony J. Clark"}]
maintainers = [{name = "Anthony J. Clark"}]
description = "A simple, PyTorch-like automatic differentiation library for education."
readme = "README.md"
keywords = ["automatic differentiation", "deep learning", "machine learning", "education"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# dependencies = [
# ]

# [project.optional-dependencies]


[tool.hatch.build.targets.wheel]
packages = ["src/match"]

[project.urls]
Homepage = "https://github.com/pymatch/pymatch"
# Documentation = ...
Repository = "https://github.com/pymatch/pymatch"
Issues = "https://github.com/pymatch/pymatch/issues"
